<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="current_map">当前地图:</string>
    <string name="up_point_cloud">上激光点云</string>
    <string name="lower_laser_point_cloud">下激光点云</string>
    <string name="top_view_route">顶视路线</string>
    <string name="virtual_wall">虚拟墙</string>
    <string name="mix_area">混行区</string>
    <string name="on_line_pose">上线点</string>
    <string name="charge_station">充电站</string>
    <string name="area">区域</string>
    <string name="world_path">路线</string>
    <string name="stations">避让点</string>
    <string name="same_switch_station">同层切换点</string>
    <string name="rf_id">RFID</string>
    <string name="rf_id_content">区域 : %1$s</string>
    <string name="world_coordinate">世界坐标</string>
    <string name="screen_coordinate">屏幕->世界坐标</string>
    <string name="origin_point">原点</string>
    <string name="cms_station">避障点</string>
    <string name="station1">停车点</string>
    <string name="station2">准备点</string>
    <string name="station3">等待点</string>
    <string name="gate_point">梯外点</string>
    <string name="pst_park_point">梯内点</string>
    <string name="machine_locate_point">一体机对接点</string>
    <string name="machine_gate_point">一体机准备点</string>
    <string name="machine_wait_point">等待点</string>
    <string name="machine_finish_point">临时停车点</string>
    <string name="elevator">乘梯点</string>
    <string name="positing_area">定位区域</string>
    <string name="start_point">起点</string>
    <string name="end_point">终点</string>
    <string name="legend">图例</string>
</resources>